# hello-world

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
.github/workflows/: bridge-release.yml  deploy-pages.yml
airflow/: .env.local.example  .gitignore  AGENTS.md  AirFlow_PRD_Codex.md  IMPLEMENTATION_PLAN.md  README.md  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
airflow/dispatcher/: deny-list.js  run.js
airflow/launchd/: com.airflow.dispatcher.plist
airflow/prompts/: morning-standup.md
airflow/scripts/: smoke.mjs
airflow/src/: types.ts
airflow/src/app/: globals.css  layout.tsx  page.tsx
airflow/src/app/api/archive/: route.ts
airflow/src/app/api/board/: route.ts
airflow/src/app/api/board/[id]/: route.ts
airflow/src/app/api/board/[id]/complete/: route.ts
airflow/src/components/: Column.tsx  TaskCard.tsx  TaskDetail.tsx  TokenGate.tsx
airflow/src/lib/: auth.ts  http.ts  storage.ts  tasks.ts
docs/: BRIDGE.md  SETUP_MAC.md  SPEC.md
scripts/: README.md  codex_build.sh  local_review.sh  morning_meeting.sh  research_scan.sh  worktree_new.sh
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bridge/: Cargo.toml
src-tauri/bridge/src/: main.rs
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: commands.rs  exec.rs  lib.rs  obsidian.rs  secrets.rs
src-tauri/dcg/: Cargo.toml
src-tauri/dcg/src/: lib.rs
src-tauri/src/: commands.rs  exec.rs  lib.rs  main.rs  mock.rs  models.rs  secrets.rs  state.rs
src/components/: ApprovalModal.tsx  CommandPalette.tsx  DiffViewer.tsx  EmptyState.tsx  HealthBar.tsx  LogStream.tsx  QuotaGauge.tsx  Sidebar.tsx  StatusDot.tsx  Toasts.tsx  ui.tsx
src/lib/: api.ts  bridge.ts  browserMock.ts  events.ts
src/screens/: Agents.tsx  Build.tsx  Dashboard.tsx  Memory.tsx  Quota.tsx  Research.tsx  Schedule.tsx  Settings.tsx
src/store/: cockpit.ts
