[package]
name = "jarvis-cockpit"
version = "1.0.0"
description = "JARVIS Cockpit — local control panel for jarvis-codex-org"
authors = ["Nishizuka Kai"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "jarvis_cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dcg = { path = "dcg" }

# Exclude the standalone dcg crate from this package's (implicit) workspace; it
# manages its own workspace for GUI-free testing.
[workspace]
exclude = ["dcg"]

[features]
# Default Tauri custom-protocol for production builds.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
