[package]
name = "jarvis-cockpit"
version = "1.0.0"
description = "JARVIS Cockpit — local control panel for jarvis-codex-org"
authors = ["Nishizuka Kai"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "jarvis_cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# 頭脳は GUI 非依存の core クレートに集約。Tauri 層は薄いラッパに徹する（§1）。
jarvis-cockpit-core = { path = "core" }

# このパッケージをワークスペースのルートにし、GUI 非依存の core / bridge / dcg を
# メンバーに含める。Linux では `cargo build -p jarvis-bridge` で core+bridge+dcg のみが
# コンパイルされ、webkit/gtk を要する tauri 本体はビルドされない（resolver=2 が前提）。
[workspace]
members = [".", "core", "bridge", "dcg"]
resolver = "2"

[features]
# Default Tauri custom-protocol for production builds.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
