# GUI 非依存の共有頭脳。Tauri に依存しないため Linux でビルド/テスト可能。
# Tauri アプリ（デスクトップ）とブリッジ（HTTP/SSE）の両トランスポートが本クレートを共有する。
[package]
name = "jarvis-cockpit-core"
version = "1.0.0"
description = "JARVIS Cockpit shared core (transport-agnostic; no GUI deps)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "jarvis_cockpit_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# rustls を使い、Linux で openssl-sys のシステム依存なしにビルドできるようにする。
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
dcg = { path = "../dcg" }
