# Part of the src-tauri workspace. Still builds/tests GUI-free on Linux via
# `cargo test -p dcg` — no webkit/gtk needed.
[package]
name = "dcg"
version = "1.0.0"
description = "Destructive Command Guard — standalone, no GUI deps (§14.2)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "dcg"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
